k8/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website-container
          image: michael2209/nginx-image:1.0
          ports:
            - containerPort: 80
