k8/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: deployment-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: website
  type: ClusterIP
