k8/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: # DNS HOST NAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deployment-svc
                port:
                  number: 80
